--- a/index.html
+++ b/index.html
@@ -220,8 +220,9 @@
         <li>https://datawanderings.com/2019/10/28/tutorial-making-a-line-chart-in-d3-js-v-5/</li>
         <h3><b>Data preprocessing</b></h3>
         <li>The data contained multiple indexes of inflation. As we are only using the consumper price index, the rest were filtered out.</li>
-        <li>For indexes, the opening, closing, low and high prices were given. The mean of low and high prices was taken as a plotting </li>
+        <li>For indexes, the opening, closing, low and high prices were given. The mean of low and high prices was taken for plotting.</li>
         <li>Every numeric/float value represented as string (with or without a comma) were converted to float/int for plotting.</li>
+        <li>For the choropleth, the quartile's of the inflation rates are calculated so as to avoid outliers from rendering the visualisation useless</li>
     </div>
 </body>
 <script src="./Map.js"></script>
